# term

./: .travis.yml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  lib.rs
.github/workflows/: clippy.yml  rustfmt.yml  spellcheck.yml  test.yml
examples/: compact-color.rs  compact.rs  full-color.rs  full.rs  term-compact.rs  term-full.rs
examples/common/: mod.rs
src/: error.rs  lib.rs  timestamp.rs
tests/: term.rs
