[package]
name = "slog-term"
version = "2.8.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Unix terminal drain and formatter for slog-rs"
keywords = ["slog", "logging", "log", "term"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog-term"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/term"
readme = "README.md"
edition = "2018"

[features]
nested-values = ["erased-serde", "serde", "serde_json", "slog/nested-values"]

[dependencies]
slog = "2"
atty = "0.2"
time = "0.2"
thread_local = "1"
term = "0.7"
erased-serde = {version = "0.3", optional = true }
serde = {version = "1.0", optional = true }
serde_json = {version = "1.0", optional = true }

[dev-dependencies]
slog-async = "2"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n## [Unreleased](https://github.com/slog-rs/term/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly=1},
]
shared-version=true
