[package]
name = "slog-term"
version = "2.9.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Unix terminal drain and formatter for slog-rs"
keywords = ["slog", "logging", "log", "term"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog-term"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/term"
readme = "README.md"
edition = "2018"
# This is our Minimum Supported Rust Version (MSRV)
#
# Please do not bump this unnecessarily.
# Changing this should bump the minor version for semver (2.x for semver).
#
# The first version of Cargo that supports this field was in Rust 1.56.0.
# In older releases, the field will be ignored, and Cargo will display a warning.
rust-version = "1.63"

[features]
nested-values = ["erased-serde", "serde", "serde_json", "slog/nested-values"]

[dependencies]
slog = "2"
is-terminal = "0.4"
time = { version = "0.3", default-features = false, features = ["macros", "formatting"] }
thread_local = "1"
term = "0.7"
erased-serde = {version = "0.3", optional = true }
serde = {version = "1.0", optional = true }
serde_json = {version = "1.0", optional = true }
# We use chrono is to determine the local timezone offset.
# This is because time uses POSIX localtime_r,
# which is not guaranteed to be thread-safe
#
# However, chrono _is_ threadsafe. It works around this issue by
# using a custom reimplementation of the timezone detection logic.
#
# Therefore, whenever the feature 'localtime' is requested,
# we add a dependency on chrono to detect the timezone.
#
# See PR #44 for the original discussion of this issue.
chrono = "0.4"

[dev-dependencies]
slog-async = "2"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n## [Unreleased](https://github.com/slog-rs/term/compare/{{tag_name}}...HEAD) - ReleaseDate\n\n", exactly=1},
]
shared-version=true
